--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@
     padding: 20px 10%;
 }
 
-#nav_menu ul li a,
+.nav_bar ul li a,
 #linkedin {
     /* will make the font appear a littlwe bolder */
     font-weight: 500;
@@ -32,25 +32,50 @@
     cursor: pointer;
 }
 
-#nav_menu ul li {
+.nav_bar ul li {
     /* This will amke the nav elements horizontally distributed */
     display: inline-block;
     padding: 0 10px;
 }
 
-button {
-    padding: 10px 20px;
-    border: solid 0.01em;
+#linkedin {
+    padding: 6px 6px 6px 6px;
+    border: solid 1px;
     border-radius: 2em;
     /* transition will control the speed of animation */
     transition: all 0.5s;
 }
 
 /* this will happen when we take the mouse corsor over the button */
-button:hover,
 #linkedin:hover {
     border: none;
     font-weight: 700;
+    /* By adding imporatnt here this will be given highest priority */
     color: #edf0f1 !important;
     background-color: rgb(0, 134, 169);
+}
+
+#toRegister {
+    text-decoration: none;
+    color: #24252A;
+    padding: 6px 6px 6px 6px;
+    border: solid 1px;
+    border-radius: 1em;
+}
+
+.form {
+    /* this bit of code will basically center the form */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 50px;
+    display: flex;
+}
+
+.cards {
+    display: flex;
+    flex: 200px;
+    align-items: center;
+    justify-content: center;
 }
